# sqlx-pool-registry

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  testing.rs
src/: db_pools.rs  lib.rs  provider.rs  registry.rs  test_db_pools.rs
tests/: db_pools.rs  pool_registry.rs  test_db_pools.rs
tests/common/: mod.rs
