[package]
name = "sqlx-pool-registry"
version = "0.2.1"
edition = "2021"
authors = ["Anton Dutov <anton.dutov@gmail.com>", "fergus.finn@doubleword.ai"]
description = "Lightweight SQLx PostgreSQL connection pool routing for primary/replica separation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anton-dutov/sqlx-pool-registry"
keywords = ["database", "postgres", "pool", "replica", "routing"]
categories = ["database", "asynchronous"]
readme = "README.md"

[dependencies]
sqlx_0_8 = { package = "sqlx", version = "0.8", optional = true, default-features = false, features = [
    "postgres",
] }
sqlx_0_9 = { package = "sqlx", version = "0.9", optional = true, default-features = false, features = [
    "postgres",
] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
sqlx_0_8 = { package = "sqlx", version = "0.8", features = [
    "postgres",
    "macros",
    "runtime-tokio",
] }
sqlx_0_9 = { package = "sqlx", version = "0.9", features = [
    "postgres",
    "macros",
    "runtime-tokio",
] }

[features]
default = ["with-sqlx-0_8"]
with-sqlx-0_8 = ["dep:sqlx_0_8"]
with-sqlx-0_9 = ["dep:sqlx_0_9"]
with-named-pools = []

[package.metadata.docs.rs]
features = ["with-named-pools"]
rustdoc-args = ["--cfg", "docsrs"]
